# hydra-playground

./: .gitignore  pyproject.toml
1_experiment_test/: README.md
1_experiment_test/conf/: config.yaml
1_experiment_test/conf/experiment/exp_type_1/: a.yaml  b.yaml
1_experiment_test/conf/experiment/exp_type_2/: a.yaml  b.yaml
