[tool.poetry]
name = "hydra-playground"
version = "0.1.0"
description = ""
authors = ["Sangwon <lsw91.main@gmail.com>"]
readme = "README.md"
packages = [{include = "hydra_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
